addition of API to add films

--- a/the_film_store.html
+++ b/the_film_store.html
@@ -120,40 +120,40 @@
     </div>
    <div class="container">
       
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="o9nTW1gRJKg" data-toggle="modal" data-target="#trailer">
-    <img src="http://thumbs1.ebaystatic.com/d/l225/m/mBjP-9Mq9FiaQcgEJngDq3g.jpg" width="220" height="342">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="tN1A2mVnrOM" data-toggle="modal" data-target="#trailer">
+    <img src="https://image.tmdb.org/t/p/w1280//rhIRbceoE9lR4veEXuwCC2wARtG.jpg" width="220" height="342">
     <h2>Toy Story</h2>
-    <p><i>A story of a boy and his toys</i></p>
+    <p><i>Led by Woody, Andy's toys live happily in his room until Andy's birthday brings Buzz Lightyear onto the scene. Afraid of losing his place in Andy's heart, Woody plots against Buzz. But when circumstances separate Buzz and Woody from their owner, the duo eventually learns to put aside their differences.</i></p>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="5PSNL1qE6VY" data-toggle="modal" data-target="#trailer">
-    <img src="https://ia.media-imdb.com/images/M/MV5BMTYwOTEwNjAzMl5BMl5BanBnXkFtZTcwODc5MTUwMw@@._V1_UX182_CR0,0,182,268_AL_.jpg" width="220" height="342">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="5MB3Ea6L-gw" data-toggle="modal" data-target="#trailer">
+    <img src="https://image.tmdb.org/t/p/w1280//kmcqlZGaSh20zpTbuoF0Cdn07dT.jpg" width="220" height="342">
     <h2>Avatar</h2>
-    <p><i>A story about aliens</i></p>
+    <p><i>In the 22nd century, a paraplegic Marine is dispatched to the moon Pandora on a unique mission, but becomes torn between following orders and protecting an alien civilization.</i></p>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="yMvpJDbWX_c" data-toggle="modal" data-target="#trailer">
-    <img src="http://img.moviepostershop.com/the-school-of-rock-movie-poster-2003-1020191888.jpg" width="220" height="342">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="LqEszt5wG9I" data-toggle="modal" data-target="#trailer">
+    <img src="https://image.tmdb.org/t/p/w1280//cREN222Yw78zvSQ9bg17Y9QZS0c.jpg" width="220" height="342">
     <h2>School of Rock</h2>
-    <p><i>Story about music</i></p>
+    <p><i>Fired from his band and hard up for cash, guitarist and vocalist Dewey Finn finagles his way into a job as a fifth-grade substitute teacher at a private school, where he secretly begins teaching his students the finer points of rock 'n' roll. The school's hard-nosed principal is rightly suspicious of Finn's activities. But Finn's roommate remains in the dark about what he's doing.</i></p>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="3YG4h5GbTqU" data-toggle="modal" data-target="#trailer">
-    <img src="https://images-na.ssl-images-amazon.com/images/I/81o%2BNjIcgHL._SL1500_.jpg" width="220" height="342">
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="jOGDozdW9Yo" data-toggle="modal" data-target="#trailer">
+    <img src="https://image.tmdb.org/t/p/w1280//y8y6Fv0k068OnHBZtu949A1t6pj.jpg" width="220" height="342">
     <h2>Ratatouille</h2>
-    <p><i>Story about rats</i></p>
+    <p><i>A rat named Remy dreams of becoming a great French chef despite his family's wishes and the obvious problem of being a rat in a decidedly rodent-phobic profession. When fate places Remy in the sewers of Paris, he finds himself ideally situated beneath a restaurant made famous by his culinary hero, Auguste Gusteau. Despite the apparent dangers of being an unlikely - and certainly unwanted - visitor in the kitchen of a fine French restaurant, Remy's passion for cooking soon sets into motion a hilarious and exciting rat race that turns the culinary world of Paris upside down.</i></p>
 </div>
 
 <div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="FAfR8omt-CY" data-toggle="modal" data-target="#trailer">
-    <img src="https://ia.media-imdb.com/images/M/MV5BMTM4NjY1MDQwMl5BMl5BanBnXkFtZTcwNTI3Njg3NA@@._V1_UX182_CR0,0,182,268_AL_.jpg" width="220" height="342">
+    <img src="https://image.tmdb.org/t/p/w1280//xxSopLYATHXSepXcEaBh9Gazv6p.jpg" width="220" height="342">
     <h2>Midnight in Paris</h2>
-    <p><i>Story about Paris</i></p>
+    <p><i>A romantic comedy about a family traveling to the French capital for business. The party includes a young engaged couple forced to confront the illusion that a life different from their own is better.</i></p>
 </div>
 
-<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="MXU9eB4gc2Y" data-toggle="modal" data-target="#trailer">
-    <img src="https://images-na.ssl-images-amazon.com/images/I/91ikvZgoHZL._SL1500_.jpg" width="220" height="342">
-    <h2>Hunger Games</h2>
-    <p><i>Story about dangerous forest</i></p>
+<div class="col-md-6 col-lg-4 movie-tile text-center" data-trailer-youtube-id="mfmrPu43DF8" data-toggle="modal" data-target="#trailer">
+    <img src="https://image.tmdb.org/t/p/w1280//iLJdwmzrHFjFwI5lvYAT1gcpRuA.jpg" width="220" height="342">
+    <h2>The Hunger Games</h2>
+    <p><i>Every year in the ruins of what was once North America, the nation of Panem forces each of its twelve districts to send a teenage boy and girl to compete in the Hunger Games.  Part twisted entertainment, part government intimidation tactic, the Hunger Games are a nationally televised event in which “Tributes” must fight with one another until one survivor remains.  Pitted against highly-trained Tributes who have prepared for these Games their entire lives, Katniss is forced to rely upon her sharp instincts as well as the mentorship of drunken former victor Haymitch Abernathy.  If she’s ever to return home to District 12, Katniss must make impossible choices in the arena that weigh survival against humanity and life against love. The world will be watching.</i></p>
 </div>
 
    </div>
